--- a/config/scaffolding/TestRestart1704Project.yml
+++ b/config/scaffolding/TestRestart1704Project.yml
@@ -7,3 +7,12 @@ packages:
   gitUrl: https://github.com/ArtiKhareIBM
   gitUsername: ArtiKhareIBM
   gitBranch: main
+services:
+- serviceName: project.testrestart1704.integrations:gcd1704
+  packages:
+  - name: TestRestart1704Project
+    version: "1.0"
+- serviceName: pub.date:getCurrentDate
+  packages:
+  - name: WmPublic
+    version: 11.1.0.0.2047
